# InfraguideAi

./: .dockerignore  .gitignore  Dockerfile  KT_INFRA_GUIDE_AI.md  README.md  docker-compose.yml  env.example
.github/workflows/: deploy.yml
backend/: .env.example  requirements.txt
backend/app/: ai.py  analyzer.py  config.py  main.py  migration_strategy.py  models.py  recommendation.py  storage.py
backend/tests/: conftest.py  test_ai.py  test_main_uploads.py  test_migration_strategy.py
cloud-intelligence-mcp/: app.py  bridge_api.py  config.py  pyproject.toml  requirements.txt
cloud-intelligence-mcp/catalogs/: aws.json  azure.json  gcp.json
cloud-intelligence-mcp/models/: pricing.py
cloud-intelligence-mcp/server/tools/: cloud_intelligence_tool.py  pricing_tool.py
cloud-intelligence-mcp/services/: pricing_cache.py
cloud-intelligence-mcp/services/aws/: pricing_client.py
cloud-intelligence-mcp/services/azure/: pricing_client.py  sku_selector.py
cloud-intelligence-mcp/services/gcp/: pricing_client.py  sku_selector.py
docker/: app-start.sh  frontend_server.py
docs/: deployment.md
documents/: AI_UNIT_TESTING_REPORT.docx  AI_USAGE_SUMMARY_DEVELOPMENT_METRICS.docx  InfraGuide_AI_Testcases.xlsx  PRESENTATION_DECK_INFRAGUIDE_AI.pptx  PRODUCT_REQUIREMENTS_DOCUMENT.docx  PROJECT_PLAN_MILESTONES_DELIVERABLES_TOOLS_TECHNOLOGIES.docx  TECHNICAL_ARCHITECTURE_BLUEPRINT.docx
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  constants.ts  main.tsx  (+2 more)
(+32 files in other folders)
