[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-intelligence-mcp"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1"
]

[tool.setuptools.packages.find]
include = ["cloud_intelligence_mcp*"]