[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-intelligence-mcp"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "mcp==1.12.0",
    "sse-starlette<3.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "redis>=5.0.0",
    "boto3>=1.35.90",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0"
]

[tool.setuptools.packages.find]
include = ["cloud_intelligence_mcp*"]
